test/parser/types/out_param_type_error.yl
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s
fn foo(): borrowed ?number{}
// CHECK: [[# @LINE - 1 ]]:11: error: expected type specifier


fn main() {
  let x: ?&number;
  // CHECK: [[# @LINE - 1 ]]:10: error: expected type specifier
}
